--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "scripts": {
-    "start": "nodemon index.js"
-},
-
-
+    "start": "nodemon index.js",
+    "auth": "nodemon authServer.js"
+  },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8",
     "nodemon": "^2.0.16"
   }
-
-  
 }
